[package]
name = "tensor_transforms"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Jack Stade <jack.stade@gmail.com>"]
repository = "https://github.com/JackStade/tensor_transforms_rs.git"
homepage = "https://github.com/JackStade/tensor_transforms_rs.git"
keywords = ["transform", "transformation", "tensor", "matrix"]
categories = ["data-structures", "science"]
license = "MIT OR Apache-2.0"

[dependencies]
tracked_mem = {git = "https://github.com/JackStade/tracked-mem-rs.git"}